change in css file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="rahul aauji30">
     <meta name="keywords" content="webdevloper">
     <title>Rahul Aauji</title>
-    <link rel="stylesheet" href="master.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&amp;display=swap" rel="stylesheet">
   </head>
